--- a/index.html
+++ b/index.html
@@ -1,190 +1,40 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105586258-1"></script>
-		<script>
-  			window.dataLayer = window.dataLayer || [];
-  			function gtag(){dataLayer.push(arguments);}
-  			gtag('js', new Date());
 
-  			gtag('config', 'UA-105586258-1');
-		</script>
+<head>
+	<title>Johanna Smith-Palliser</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/style.css" />
 
-		<title>Johanna Smith-Palliser</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/style.css" />
-  
-		<meta name="author" content="Johanna Smith-Palliser">
-		<meta name="description" content="Johanna Smith-Palliser - Software Engineer | CS @ Cornell">
-		
-		<meta itemprop="name" content="Johanna Smith-Palliser">
-	</head>
-	<body class="landing is-preload">
-		<div id="page-wrapper">
+	<meta name="author" content="Johanna Smith-Palliser">
+	<meta name="description" content="Johanna Smith-Palliser - Software Engineer | CS @ Cornell">
 
-			<!-- Header -->
-				<!-- <header id="header" class="alt">
-					<h1>Johanna Smith-Palliser</h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header> -->
+	<meta itemprop="name" content="Johanna Smith-Palliser">
 
-			<!-- Banner -->
-				<section id="banner">
-					<img src="images/johanna.jpg" class="img-circle center" alt="Picture of Johanna Smith-Palliser" />
-					<h2>Johanna Smith-Palliser</h2>
-					<p>Developer | Mentor | CS @ Cornell</p>
-				</section>
+	<!-- Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap" rel="stylesheet">
+</head>
 
-			<!-- Main -->
-				<section id="main" class="container">
+<body>
 
-					<section class="box special">
-						<header class="major">
-							<h2>Hey there!</h2>
-							<p>I'm Johanna, a Latina software engineer interested in tackling hard problems and making the tech industry look more like the diverse world we live in. This Fall, I will be continuing my studies at Cornell University pursuing a Master of Engineering degree in Computer Science. My interests in technology include Software Engineering, Full-Stack Development, and Mobile Development (iOS). In my free time, I like to run, cook, and find new donut shops to try.</p>
-						</header>
-						<ul class="icons">
-							<li><a href="https://twitter.com/godinasss" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.instagram.com/godinasss/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/johannasp" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/johannasp/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="/resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
-						</ul>
-						<span class="image featured"><img src="images/snee.jpg" alt="" /></span>
-					</section>
-
-					<section class="box special features">
-						<div class="features-row">
-							<section>
-								<img src="images/adobe.png" class="img-circle center company" alt="Twitter icon" />
-								<h3>Adobe</h3>
-								<h4>Summer 2019</h4>
-								<p>Working on the Lightroom Cloud Services team as a <strong>Software Engineer Intern</strong>, I led efforts to transform critical image processing microservices testing into a more streamlined deployment pipeline. More specifically, I developed a comprehensive test suite of unit, component, and end-to-end tests in Ruby to effectively test these microservices and provide modularization of code. In doing this, I was able to reduce test runtime by up to 20 seconds per test for thousands of tests cases. </p>
-							</section>
-							<section>
-								<img src="images/twitter.png" class="img-circle center company" alt="Cornell icon" />
-								<h3>Twitter</h3>
-								<h4>Summer 2018</h4>
-								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience. I wrote a technical design document to plan my implementation and continued updating it throughout the development process to ensure the project's success when pushed to production after the conclusion of my internship. My work is currently in production, improving load time by up to 5 seconds per ad unit.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<img src="images/cornell.png" class="img-circle center company" alt="Twitter icon" />
-								<h3>Cornell Engineering</h3>
-								<h4>Fall/Spring 2018, Spring 2019</h4>
-								<p>In the Department of Computer Science, my role as a <strong>Teaching Assistant</strong> for the introductory and intermediate web development courses (CS 1300, CS 2300) allows me to help convey technical knowledge to fellow students in a concise and welcoming manner to enable them to continue in the field with confidence and a sense of belonging. Technical concepts for this course include: frontend and backend development, database construction, user interactivity, design principles.</p>
-							</section>
-							<section>
-								<img src="images/ge.png" class="img-circle center company" alt="Cornell icon" />
-								<h3>GE Aviation</h3>
-								<h4>Summer 2017</h4>
-								<p>As a <strong>Digital Technology Leadership Program Intern</strong>, I leveraged my technical knowledge in software development and database management to lead a project for a tool to be used on shop floors. By communicating technical features of projects to non-technical stakeholders, I was able to gain insight into defining the problem statement that would later inform my decisions in building a product roadmap with best implementation methods.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section style="width: 100%; padding:3em;">
-								<img src="images/codekids.png" class="center company" alt="GE icon" />
-								<h3>CodeKids Camp</h3>
-								<h4>Summer 2016</h4>
-								<p>At CodeKids, I worked an <strong>Instructor</strong> to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
-							</section>
-						</div>
-						<span class="image featured"><img src="images/muir.jpg" alt="" /></span>
-					</section>
-
-					<!-- Projects to consider: 
-						 Career Queue, AI Prac project, some future data viz project -->
-
-					<div class="row">
-						<div class="col-4 col-12-narrower">
-							<section class="box special">
-								<span class="image featured"><img src="images/chef.jpg" alt="Chef's Choice logo" /></span>
-								<h3>Chef's Choice</h3>
-								<p>Recipe recommendation system based on mood.</p>
-								<!-- <ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul> -->
-							</section>
-						</div>
-						<div class="col-4 col-12-narrower">
-							<section class="box special">
-								<span class="image featured"><a href="http://hyperloop.mae.cornell.edu"><img src="images/hyperloop.png" alt="Cornell Hyperloop logo" /></a></span>
-								<h3><a href="http://hyperloop.mae.cornell.edu">Cornell Hyperloop</a></h3>
-								<p>Revolutionizing the future of transportation.</p>
-								<!-- <ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul> -->
-							</section>
-						</div>
-						<div class="col-4 col-12-narrower">
-							<section class="box special">
-								<span class="image featured"><a href="https://github.com/JustinShillingford/OVegas"><img src="images/ovegas.png" alt="OVegas gameplay" /></a></span>
-								<h3><a href="https://github.com/JustinShillingford/OVegas">OVegas</a></h3>
-								<p>Texas Holdem Poker, OCaml version.</p>
-								<!-- <ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul> -->
-							</section>
-						</div>
-						<div class="col-4 col-12-narrower">
-							<section class="box special">
-								<span class="image featured"><a href="projects/data+viz.html"><img src="images/viz.png" alt="Data visualization stock image" /></a></span>
-								<h3><a href="projects/data+viz.html">Data Viz</a></h3>
-								<p>Data visualizations using d3.js that make data concise and meaningful.</p>
-							</section>
-						</div>
-					</div>
-
-				</section>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="copyright">
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
-
+	<div style="display:flex; width:100%; margin-top: 5vh;">
+		<div style="width:40%">
+			<div style="padding-left: 25%; padding-top: 10%;">
+				<h1>Johanna <br />Smith-Palliser</h1>
+				<h2>Made in Miami, based in Brooklyn.</h2>
+				<h3>Telling data-driven stories through full-stack web development and data visualization</h3>
+				<!-- <h3>Made in Miami, based in Brooklyn.</h3> -->
+			</div>
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<div style="width:60%">
+			<img src="images/headshot.jpeg" class="center headshot" alt="Headshot of Johanna Smith-Palliser" />
+		</div>
+	</div>
 
-	</body>
+</body>
+
 </html>
