make mobile-friendly

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
 	<title>Johanna Smith-Palliser</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/style.css" />
 
 	<meta name="author" content="Johanna Smith-Palliser">
-	<meta name="description" content="Johanna Smith-Palliser - Software Engineer | CS @ Cornell">
-
+	<meta name="description" content="Johanna Smith-Palliser">
 	<meta itemprop="name" content="Johanna Smith-Palliser">
 
 	<!-- Fonts -->
@@ -20,17 +19,16 @@
 
 <body>
 
-	<div style="display:flex; width:100%; margin-top: 5vh;">
-		<div style="width:40%">
-			<div style="padding-left: 25%; padding-top: 10%;">
+	<div class="parent-container">
+		<div class="col-left">
+			<div class="text-content">
 				<h1>Johanna <br />Smith-Palliser</h1>
 				<h2>Made in Miami, based in Brooklyn.</h2>
 				<h3>Telling data-driven stories through full-stack web development and data visualization</h3>
-				<!-- <h3>Made in Miami, based in Brooklyn.</h3> -->
 			</div>
 		</div>
 
-		<div style="width:60%">
+		<div class="col-right">
 			<img src="images/headshot.jpeg" class="center headshot" alt="Headshot of Johanna Smith-Palliser" />
 		</div>
 	</div>
